--- a/Moduo2/Client/Views/DevWork.xaml
+++ b/Moduo2/Client/Views/DevWork.xaml
@@ -11,7 +11,7 @@
             <TabItem Header="Tasks" Margin="167,1,-171,-1" Height="39">
                 <Grid Background="#FFE5E5E5">
                     <Grid  Background="White" Margin="10,191,297,10">
-                        <Button x:Name="buttonTaskDescription" Content="Task Description" IsEnabled="True" HorizontalAlignment="Left" Height="21" Margin="10,10,0,0" VerticalAlignment="Top"  Width="130" Click="buttonTaskDescription_Click"  />
+                        <Button x:Name="buttonTaskDescription" Content="Task Description" IsEnabled="True" HorizontalAlignment="Left" Height="21" Margin="10,10,0,0" VerticalAlignment="Top"  Width="130" Click="ButtonTaskDescription_Click"  />
                         <TextBox x:Name="textTaskDescription" Background="AntiqueWhite" HorizontalAlignment="Left" Height="72" Margin="10,36,0,0" IsHitTestVisible="False" Focusable="False" BorderBrush="Transparent" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="413" />
                     </Grid>
                     <DataGrid x:Name="dataGridTasks" ItemsSource="{Binding AllTasks, Mode=TwoWay}" SelectionMode="Single"  AutoGenerateColumns="False" HeadersVisibility="Column" IsReadOnly="True" CanUserAddRows="False" CanUserResizeColumns="False" CanUserReorderColumns="False" HorizontalAlignment="Left" Height="176" Margin="10,10,0,0" VerticalAlignment="Top" Width="433">
@@ -27,7 +27,7 @@
                         <Label x:Name="labelTitle3" Content="Claim task" FontSize="16" HorizontalAlignment="Left" Height="37" Margin="90,10,-20,0" VerticalAlignment="Top" Width="199"/>
                         <Label x:Name="labelTask1" Content="Task: (must be unclaimed)" HorizontalAlignment="Left" Height="26" Margin="12,47,0,0" VerticalAlignment="Top" Width="257" RenderTransformOrigin="0.372,0.731"/>
                         <ComboBox x:Name="comboBoxAllTasks" ItemsSource="{Binding AllTasks, Mode=TwoWay}" HorizontalAlignment="Left" Height="24" Margin="10,73,0,0" VerticalAlignment="Top" Width="238"/>
-                        <Button x:Name="buttonTaskClaim" Content="Claim" IsEnabled="True" HorizontalAlignment="Left" Height="31" Margin="194,258,0,0" VerticalAlignment="Top" Width="65" Click="buttonTaskClaim_Click"/>
+                        <Button x:Name="buttonTaskClaim" Content="Claim" IsEnabled="True" HorizontalAlignment="Left" Height="31" Margin="194,258,0,0" VerticalAlignment="Top" Width="65" Click="ButtonTaskClaim_Click"/>
                     </Grid>
 
                 </Grid>
@@ -35,7 +35,7 @@
             <TabItem Header="My Tasks" Margin="173,1,-177,-1" Height="39">
                 <Grid Background="#FFE5E5E5">
                     <Grid  Background="White" Margin="10,191,297,10">
-                        <Button x:Name="buttonMyTaskDescription" Content="Task Description" IsEnabled="True" HorizontalAlignment="Left" Height="21" Margin="10,10,0,0" VerticalAlignment="Top"  Width="130" Click="buttonMyTaskDescription_Click" />
+                        <Button x:Name="buttonMyTaskDescription" Content="Task Description" IsEnabled="True" HorizontalAlignment="Left" Height="21" Margin="10,10,0,0" VerticalAlignment="Top"  Width="130" Click="ButtonMyTaskDescription_Click" />
                         <TextBox x:Name="textMyTaskDescription" Background="AntiqueWhite" HorizontalAlignment="Left" Height="72" Margin="10,36,0,0" IsHitTestVisible="False" Focusable="False" BorderBrush="Transparent" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="426" />
                     </Grid>
                     <DataGrid x:Name="dataGridMyTasks" ItemsSource="{Binding MyTasks, Mode=TwoWay}" SelectionMode="Single"  AutoGenerateColumns="False" HeadersVisibility="Column" IsReadOnly="True" CanUserAddRows="False" CanUserResizeColumns="False" CanUserReorderColumns="False" HorizontalAlignment="Left" Height="176" Margin="10,10,0,0" VerticalAlignment="Top" Width="433">
@@ -49,7 +49,7 @@
                         <Label x:Name="labelTitle4" Content="Mark task as completed" FontSize="16" HorizontalAlignment="Left" Height="37" Margin="42,10,0,0" VerticalAlignment="Top" Width="199"/>
                         <Label x:Name="labelTask2" Content="Task: (must be uncomleted)" HorizontalAlignment="Left" Height="26" Margin="12,47,0,0" VerticalAlignment="Top" Width="257" RenderTransformOrigin="0.372,0.731"/>
                         <ComboBox x:Name="comboBoxMyTasks" ItemsSource="{Binding MyTasks, Mode=TwoWay}" HorizontalAlignment="Left" Height="24" Margin="10,73,0,0" VerticalAlignment="Top" Width="238"/>
-                        <Button x:Name="buttonTaskComplete" Content="Complete" IsEnabled="True" HorizontalAlignment="Left" Height="31" Margin="194,258,0,0" VerticalAlignment="Top" Width="65" Click="buttonTaskComplete_Click"/>
+                        <Button x:Name="buttonTaskComplete" Content="Complete" IsEnabled="True" HorizontalAlignment="Left" Height="31" Margin="194,258,0,0" VerticalAlignment="Top" Width="65" Click="ButtonTaskComplete_Click"/>
                     </Grid>
                 </Grid>
             </TabItem>
@@ -65,7 +65,7 @@
                     </DataGrid>
                     <Grid  Background="White" Margin="385,10,10,10">
                         <Label x:Name="labelTitle445" Content="Userstory description" FontSize="16" HorizontalAlignment="Left" Height="37" Margin="95,10,0,0" VerticalAlignment="Top" Width="199"/>
-                        <Button x:Name="buttonUserStoryDescription" Content="Userstory Description" IsEnabled="True" HorizontalAlignment="Left" Height="33" Margin="205,256,0,0" VerticalAlignment="Top"  Width="130" Click="buttonUserStoryDescription_Click"  />
+                        <Button x:Name="buttonUserStoryDescription" Content="Userstory Description" IsEnabled="True" HorizontalAlignment="Left" Height="33" Margin="205,256,0,0" VerticalAlignment="Top"  Width="130" Click="ButtonUserStoryDescription_Click"  />
                         <TextBox x:Name="textUserStoryDescription" Background="AntiqueWhite" HorizontalAlignment="Left" Height="184" Margin="10,57,0,0" IsHitTestVisible="False" Focusable="False" BorderBrush="Transparent" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="325" />
                     </Grid>
                 </Grid>
@@ -80,7 +80,7 @@
                     </DataGrid>
                     <Grid  Background="White" Margin="385,10,10,10">
                         <Label x:Name="labelTitle44" Content="Project description" FontSize="16" HorizontalAlignment="Left" Height="37" Margin="95,10,0,0" VerticalAlignment="Top" Width="199"/>
-                        <Button x:Name="buttonProjectDescription" Content="Project Description" IsEnabled="True" HorizontalAlignment="Left" Height="33" Margin="205,256,0,0" VerticalAlignment="Top"  Width="130" Click="buttonProjectDescription_Click" />
+                        <Button x:Name="buttonProjectDescription" Content="Project Description" IsEnabled="True" HorizontalAlignment="Left" Height="33" Margin="205,256,0,0" VerticalAlignment="Top"  Width="130" Click="ButtonProjectDescription_Click" />
                         <TextBox x:Name="textProjectDescription" Background="AntiqueWhite" HorizontalAlignment="Left" Height="184" Margin="10,57,0,0" IsHitTestVisible="False" Focusable="False" BorderBrush="Transparent" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="325" />
                     </Grid>
                 </Grid>
