--- a/Moduo1/Client/MainWindow.xaml
+++ b/Moduo1/Client/MainWindow.xaml
@@ -101,7 +101,7 @@
                                 <Label x:Name="labelPartnerCompanies" Content="Partner Companies:" Height="28" Margin="39,0,635,0" VerticalAlignment="Top" Width="196" FontSize="13" FontWeight="SemiBold"/>
                             </Grid>
                         </TabItem>
-                        <TabItem Header="Projects" Margin="0,10,-71,-10" HorizontalAlignment="Right" Width="70" Height="39" Focusable="True">
+                        <TabItem x:Name="Projects_TabItem" Header="Projects" Margin="0,10,-71,-10" HorizontalAlignment="Right" Width="70" Height="39" Focusable="True">
                             <Grid Background="#FFF7F7F7" Margin="0,17,0,0" Focusable="True">
                                 <DataGrid x:Name="DataGridUserStories" TextOptions.TextFormattingMode="Ideal" HorizontalAlignment="Left" Margin="365,66,0,0" 
                                           VerticalAlignment="Top" Height="326" Width="468" Background="#FFDDDDDD"
@@ -192,7 +192,7 @@
                                             </Grid>
                                         </Grid>
                                     </TabItem>
-                                    <TabItem x:Name="tabItemCompanies" Header="Partner Companies" Height="39">
+                                    <TabItem x:Name="tabItemCompanies" Header="Possible Partner Companies" Height="39">
                                         <Grid Background="#FFF7F7F7">
                                             <DataGrid x:Name="PossiblePartnerCompaniesDataGrid" HorizontalAlignment="Left" Margin="10,39,0,0" VerticalAlignment="Top" Height="230" Width="252" Background="#FFDDDDDD"
                                           IsReadOnly="True" CanUserAddRows="False" ItemsSource="{Binding}"
@@ -216,7 +216,7 @@
                                             <Button x:Name="PartnershipRequestCEO_button" Content="Send partnership request" HorizontalAlignment="Left" Margin="60,274,0,0" VerticalAlignment="Top" Width="152" Height="27" Click="PartnershipRequestCEOButton_Click" Background="#FFF4F5F7" BorderBrush="#FFABADB3" Foreground="#FF1F3277" FontWeight="Bold" BorderThickness="1"/>
                                         </Grid>
                                     </TabItem>
-                                    <TabItem x:Name="tabItemProjects" Header="Projects" Height="39" Margin="-1,-1,-3,1">
+                                    <TabItem x:Name="tabItemProjects" Header="Projects" Height="39" >
                                         <Grid Background="#FFF7F7F7">
                                             <DataGrid x:Name="projectsForApprovalDataGrid" HorizontalAlignment="Left" Margin="10,40,0,0" VerticalAlignment="Top" Height="230" Width="262" Background="#FFDDDDDD"
                                                       IsReadOnly="True" CanUserAddRows="False" ItemsSource="{Binding}"
@@ -282,11 +282,11 @@
                                 <TextBox x:Name="ProjectDescriptionTextBox" HorizontalAlignment="Left" Height="92" Margin="98,43,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="156"/>
                                 <TextBox x:Name="ProjectStartDateTextBox" HorizontalAlignment="Left" Height="23" Margin="98,140,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="156"/>
                                 <TextBox x:Name="ProjectDeadlineTextBox" HorizontalAlignment="Left" Height="23" Margin="98,168,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="156"/>
-                                <Button x:Name="CreateProjectButton" Content="Create project" HorizontalAlignment="Left" Margin="169,227,0,0" VerticalAlignment="Top" Width="85" Click="CreateProjectButton_Click" Background="#FFF4F5F7" BorderBrush="#FFABADB3" Foreground="#FF1F3277" FontWeight="Bold" BorderThickness="1" Height="27"/>
-                                <Label x:Name="DateTimeFormatLabel" Content="" HorizontalAlignment="Left" Margin="259,128,0,0" VerticalAlignment="Top" Width="114" Height="35"/>
+                                <Button x:Name="CreateProjectButton" Content="Create project" HorizontalAlignment="Left" Margin="275,229,0,0" VerticalAlignment="Top" Width="85" Click="CreateProjectButton_Click" Background="#FFF4F5F7" BorderBrush="#FFABADB3" Foreground="#FF1F3277" FontWeight="Bold" BorderThickness="1" Height="27"/>
+                                <Label x:Name="DateTimeFormatLabel" Content="" HorizontalAlignment="Left" Margin="259,140,0,0" VerticalAlignment="Top" Width="114" Height="35"/>
                                 <Grid HorizontalAlignment="Left" Height="410" Margin="392,10,0,0" VerticalAlignment="Top" Width="468" Background="White">
                                     <ComboBox x:Name="WorkPOProjectsComboBox" ItemsSource="{Binding}" DisplayMemberPath="Name" HorizontalAlignment="Left" Margin="23,44,0,0" VerticalAlignment="Top" Width="184" SelectionChanged="ProjectsComboBox_SelectionChanged"/>
-                                    <Button x:Name="ApproveUserStoriesButton" Content="Approve User Stories" HorizontalAlignment="Left" Margin="23,376,0,0" VerticalAlignment="Top" Width="184" Height="23" Click="ApproveUserStoriesButton_Click"/>
+                                    <Button x:Name="ApproveUserStoriesButton" Content="Approve User Stories" HorizontalAlignment="Left" Margin="241,377,0,0" VerticalAlignment="Top" Width="134" Height="27" Background="#FFF4F5F7" BorderBrush="#FFABADB3" Foreground="#FF1F3277" FontWeight="Bold" BorderThickness="1" Click="ApproveUserStoriesButton_Click"/>
                                     <ListBox x:Name="UserStoriesForApprovalListBox" HorizontalAlignment="Left" Height="274" Margin="23,83,0,0" VerticalAlignment="Top" Width="352">
                                     </ListBox>
                                     <Label Content="User stories for approval:" HorizontalAlignment="Left" Margin="23,10,0,0" VerticalAlignment="Top" Width="184" FontSize="14" FontWeight="Bold"/>
@@ -296,7 +296,7 @@
                                 <Grid Background="White" HorizontalAlignment="Left" Height="142" Margin="10,278,0,0" VerticalAlignment="Top" Width="363">
                                     <Label Content="Projects that can be closed:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="193" FontSize="14" FontWeight="Bold"/>
                                     <ComboBox x:Name="ProjectsForClosingComboBox" ItemsSource="{Binding}" DisplayMemberPath="Name" HorizontalAlignment="Left" Margin="10,59,0,0" VerticalAlignment="Top" Width="193"/>
-                                    <Button x:Name="CloseProjectButton" Content="Mark project as closed" HorizontalAlignment="Left" Margin="207,109,0,0" VerticalAlignment="Top" Width="146" Height="23" Click="CloseProjectButton_Click"/>
+                                    <Button x:Name="CloseProjectButton" Content="Mark project as closed" HorizontalAlignment="Left" Margin="207,109,0,0" VerticalAlignment="Top" Width="146" Height="27" Background="#FFF4F5F7" BorderBrush="#FFABADB3" Foreground="#FF1F3277" FontWeight="Bold" BorderThickness="1" Click="CloseProjectButton_Click"/>
                                 </Grid>
                             </Grid>
                         </TabItem>
@@ -330,7 +330,7 @@
                                     <Label x:Name="oldPasswordLabel" Content="Type in current password: " HorizontalAlignment="Left" Height="29" Margin="10,34,0,0" VerticalAlignment="Top" Width="157"/>
                                     <Label x:Name="newPasswordLabel" Content="Type in new password: " HorizontalAlignment="Left" Height="36" Margin="10,60,0,0" VerticalAlignment="Top" Width="148"/>
                                     <PasswordBox x:Name="passBoxOldPass" IsEnabled="False" HorizontalAlignment="Left" Height="19" Margin="167,39,0,0" VerticalAlignment="Top" Width="145" PasswordChanged="PassBoxOldPass_PasswordChanged" LostFocus="PassBoxOldPass_LostFocus"/>
-                                    <PasswordBox x:Name="passBoxNewPass" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="167,63,0,0" VerticalAlignment="Top" Width="145" GotFocus="passBoxNewPass_GotFocus"/>
+                                    <PasswordBox x:Name="passBoxNewPass" IsEnabled="False" HorizontalAlignment="Left" Height="20" Margin="167,63,0,0" VerticalAlignment="Top" Width="145" GotFocus="PassBoxNewPass_GotFocus"/>
                                     <Label x:Name="warningPasswordLabel" Content="" HorizontalAlignment="Left" Margin="10,101,0,0" VerticalAlignment="Top" Width="302"/>
                                 </Grid>
                                 <Grid Background="White" Margin="433,348,31,4">
